--- a/m/me/mer/mergernetwork.com.html
+++ b/m/me/mer/mergernetwork.com.html
@@ -1,15 +1,16 @@
-<!--The following is the downloaded HTML source of the mergernetwork.com privacy policy that was archived on 2008-10-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081002015510id_/http%3A//www.mergernetwork.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the mergernetwork.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616065654id_/http%3A//www.mergernetwork.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html><head>
 	<title>Businesses for Sale | Business for Sale Listings | Buy - Sell - Find A Business! | MergerNetwork.com</title>
-	<meta name="Description" content="Businesses For Sale - Search thousands of business for sale listings in the US and worldwide. Get listing recommendations from your personal search assistant. Sell your business online with a free ad.">
-	<meta name="Keywords" content="businesses for sale, business for sale, small businesses for sale, small business for sale, companies for sale, company for sale, sell a business, sell your business, buy a business, business buyer">
+	<meta name="description" content="Businesses For Sale - Search thousands of business for sale listings in the US and worldwide. Get listing recommendations from your personal search assistant. Sell your business online with a free ad.">
+	<meta name="keywords" content="businesses for sale, business for sale, small businesses for sale, small business for sale, companies for sale, company for sale, sell a business, sell your business, buy a business, business buyer">
 	
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="verify-v1" content="1XzFZK8O1HvoHbgT0q1VTWF1umvKsbvXRAapLRy9khI=">
-	<!-- businesses for sale, business for sale, small businesses for sale, small business for sale, companies for sale, company for sale, sell a business, sell your business, buy a business, business buyer -->
-
+	<meta name="msvalidate.01" content="2B3F609C8F2A10B1DE655AB81EFE0993">
+	<meta name="y_key" content="cf90701b4eb93abe">
+	
 	<base href="http://www.mergernetwork.com/">
 
 	<link rel="stylesheet" type="text/css" href="//assets.braunsmedia.com/default.css">
@@ -18,6 +19,15 @@
 
 	<link rel="icon" href="//assets.braunsmedia.com/MNT/favicon.ico" type="image/x-icon">
 	<link rel="shortcut icon" href="//assets.braunsmedia.com/MNT/favicon.ico" type="image/x-icon">
+
+		<!-- enableJQuery() called -->
+		<script language="javascript" src="//assets.braunsmedia.com/js/jQuery/jquery-1.3.2.min.js" type="text/javascript"></script>
+		
+		
+		
+	<script type="text/javascript" src="//assets.braunsmedia.com/js/quicksearch_20090423.js"></script>
+	<script type="text/javascript" src="//assets.braunsmedia.com/js/jQuery/plugins/jquery.autocomplete.min.js"></script>
+	<link href="//assets.braunsmedia.com/js/jQuery/plugins/jquery.autocomplete.css" rel="stylesheet" type="text/css">
 
 			
 	<script src="http://www.google-analytics.com/ga.js" type="text/javascript"></script>
@@ -34,54 +44,54 @@
 
 <div id="body">
 
-	<div id="utilityNav" class="clearfix">
+	
+	<div id="masthead" class="clearfix">
+		<ul id="primarynav">
+	
+		<li id="n7"><a href="http://www.mergernetwork.com/help/main" title="Buying a Business Help">Help</a></li>
+		<li id="n6"><a href="http://www.mergernetwork.com/my-mergernetwork/" title="Business Brokers Login">My MergerNetwork</a></li>
 		
-<ul>
-
-
-	<li><a href="http://www.mergernetwork.com/member/login">Member Login</a></li>
-
-<li><a href="http://www.mergernetwork.com/help/main" title="Help" style="border-right-width:0px;">Help</a></li>
-
+		<li id="n4"><a href="http://www.mergernetwork.com/businesses-for-sale-research/" title="Businesses For Sale Research">Research</a></li>
+		<li id="n3"><a href="http://www.mergernetwork.com/sell-your-business-or-company/" title="Sell Your Business or Company">Sell</a></li>
+		
+			<li id="n2"><a href="http://www.mergernetwork.com/buy-a-business-for-sale/" title="Buy a Business For Sale">Buy</a></li>
+			<li id="n1"><a href="http://www.mergernetwork.com/" title="MergerNetwork.com">Home</a></li>
+		
+	
 </ul>
 
+		<img src="//assets.braunsmedia.com/MNT/image/mn_logo.gif" style="float:left; margin-top:-20px; margin-left:10px;" alt="MergerNetwork - Research and Find Businesses For Sale" title="MergerNetwork - Research and Find Businesses For Sale" hspace="0" vspace="0">
+		
+
+	<p id="welcomeMessage">Welcome Guest. (<a href="member/login/">Log in</a>, <a href="member/login/">Register</a>)</p>
+
 
 	</div>
-	<div id="masthead" class="clearfix">
-		<img src="//assets.braunsmedia.com/MNT/image/ui-logo-w-tagline.gif" width="385" height="59" style="float:left; clear:both;" alt="MergerNetwork - Research and Find Businesses For Sale" title="MergerNetwork - Research and Find Businesses For Sale" hspace="0" vspace="0">
+	
+	
+
+	
+	
+	<div id="toolbar">
+		
+
+
+	
+	
+
+<form action="/index.cfm/fuseaction/browseBFS.search/index.htm" method="get" id="quicksearch">
+	<input type="hidden" name="isSubmitted" value="true">
+	<input type="hidden" name="method" value="SearchBar">
+	<input type="hidden" name="resetSearch" value="true">
+	<input type="hidden" name="locID" value="0">
+	<input type="text" name="kw" value="" style="background:white url(//assets.braunsmedia.com/image/inputhint_keyword.gif) left center no-repeat;">
+	<input type="text" name="location" value="" style="background:white url(//assets.braunsmedia.com/image/inputhint_location.gif) left center no-repeat;">
+	<button type="submit" class="btn-sm red"><span>Search</span></button>
+</form>
+
+
+				
 	</div>
-	
-	
-
-<div id="navbar" class="clearfix">
-	
-	<ul>
-		
-			<li><a href="http://www.mergernetwork.com/" title="MergerNetwork.com">Home</a></li>
-		
-		
-			<li><a href="/index.cfm/fuseaction/browseBFS.search/">Search Businesses For Sale</a></li>
-			<li><a href="/index.cfm/fuseaction/browseBFS.browse/">Browse Businesses For Sale</a></li>
-		
-		<li><a href="http://www.mergernetwork.com/member/tools" title="Research">Research</a></li>
-	</ul>
-	
-</div>
-
-<div id="localNav">
-	<ul>
-	
-			<style type="text/css">#localNav {height:6px;}</style>
-		
-	</ul>
-</div>
-
-
-	
-
-	
-	
-	
 	
 	
 	<div id="page" class="clearfix">
@@ -127,7 +137,7 @@
 
 <p><u>Tracking Technology.</u> MergerNetwork logs IP addresses (a unique number assigned to every computer on the Internet) in order to improve security, analyze trends and administer the Site. We may track your movement within the Site, the pages from which you were referred, access times and browser types. We only use this information in aggregate and do not link it to you personally unless you opt in as a subscriber. To gauge the effectiveness of our Site, we do collect some generic information about our visitors. Our web servers automatically recognize a visitor's domain name, the web page from which a visitor enters our Site, which pages a visitor visits on our Site, and how much time a visitor spends on each page. We may use anonymous tracking technologies to collect, store and sometimes track information for statistical purposes and to improve the products and services we provide. We aggregate this information and use it to evaluate and improve our Site. We store information that we collect through cookies, log files, clear gifs, and/or third party sources for instance to verify your address or update your information and to create a "profile" of your preferences. We tie your personally identifiable information to information in the profile, in order to improve the content of the Site for you. A cookie is a small text file that is stored on a user's computer for record-keeping purposes. We use cookies on this Site. We use session ID cookies and persistent cookies. We use session cookies to make it easier for you to navigate our Site. A session ID cookie expires when you close you browser. A persistent cookie remains on your hard drive for an extended period of time. You can remove persistent cookies by following directions provided in your Internet browser's "help" file. Persistent cookies are used to differentiate registered users from non-registered users, to differentiate logged-in users from non-logged-in users, to customize the content of certain sections of the website, to enable us to track and target the interests of our users, and to enhance the experience on our Site. If you reject cookies, you may still use our Site, but your ability to use some areas of our Site may be limited.</p> 
 
-<p><u>Registration:</u> If you subscribe to the Basic Edition of our services, we will collect your name and email address. If you then upgrade to the Professional Edition, we will collect your billing information.</p>
+<p><u>Registration:</u> If you subscribe to the Basic Edition of our services, we will collect your name and email address. If you then upgrade to the Premier Edition, we will collect your billing information.</p>
 
 <p><u>Surveys:</u> We may from time to time provide a survey for our subscribers to fill out providing us with demographic information (such as income level and gender). We encourage you to submit this information so we can provide you a more personalized experience on our Site but participation is entirely voluntary.</p> 
 
@@ -175,7 +185,7 @@
 <p>If you have any questions about our privacy policy, send us a message using the contact form at <a href="help/writetous">http://www.mergernetwork.com/help/writetous</a>.</p>
 
 <p>
-©2008 Brauns Online Media, Inc.<br>
+©2009 Brauns Online Media, Inc.<br>
 Effective Date: July 1, 2007 
 </p>
 
@@ -186,7 +196,7 @@ Effective Date: July 1, 2007
 	</div>
 	
 	
-	<div style="background-color:#E1DBDB; height:5px; border: solid #444647; border-width:1px 0 0 0; overflow:hidden; clear:both; width:100%;"></div>
+	<div style="background-color:#E1DBDB; height:5px; overflow:hidden; clear:both; width:100%;"></div>
 
 
 
@@ -194,18 +204,16 @@ Effective Date: July 1, 2007
 
 
 <div id="footernav">
-	<div style="float:right;">© 1995-2008 Brauns Online Media</div>
-	<a href="rss/">RSS feeds</a>&nbsp;&nbsp;&nbsp;
-	<a href="company">company information</a>&nbsp;&nbsp;&nbsp;
-	<a href="privacy">privacy policy</a>&nbsp;&nbsp;&nbsp;
-	<a href="terms">terms of use</a>&nbsp;&nbsp;&nbsp;
-	<a href="resources/main">resources</a>&nbsp;&nbsp;&nbsp;
-	<a href="links/">useful links</a>
+	<div style="float:right;">© 1995-2009 Brauns Online Media</div>
+	<a href="rss/" rel="nofollow">RSS feeds</a>&nbsp;&nbsp;&nbsp;
+	<a href="company" rel="nofollow">company information</a>&nbsp;&nbsp;&nbsp;
+	<a href="privacy" rel="nofollow">privacy policy</a>&nbsp;&nbsp;&nbsp;
+	<a href="terms" rel="nofollow">terms of use</a>
 </div>
 
 
 <div style="margin-top:8px; padding:0px 10px;">
-	<a href="rss/">
+	<a href="rss/" rel="nofollow">
 	<img src="//assets.braunsmedia.com/image/ico-rss-2.gif" alt="RSS 2.0" align="middle">
 	<img src="//assets.braunsmedia.com/image/ico-xml.gif" alt="XML" align="middle">
 	</a>
@@ -219,9 +227,7 @@ Effective Date: July 1, 2007
 
 
 
-
-
-
+<!-- application in live mode last inited Wednesday, June 10, 2009 at 11:59:48 -->
 
 	
 	
