--- a/i/im/img/img98.com.html
+++ b/i/im/img/img98.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the img98.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216030106id_/http%3A//www.img98.com/info.php%3Fact%3Dprivacy_policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the img98.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616071538id_/http%3A//img98.com/info.php%3Fact%3Dprivacy_policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/2002/REC-xhtml1-20020801/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en-gb" xml:lang="en-gb"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -7,9 +7,9 @@
 <meta http-equiv="Content-Language" content="en-gb">
 <meta http-equiv="imagetoolbar" content="no">
 <title>img98.com Image Upload Center » More Information » Privacy Policy</title>
-<meta name="keywords" content="image hosting, image hosting service, multiple image hosting, unlimited bandwidth, quick image hosting, photo, hosting, picture">
+<meta name="keywords" content="image hosting, image hosting service, multiple image hosting, unlimited bandwidth, quick image hosting">
 <meta name="description" content="img98.com Image Upload Center is an easy image hosting solution for everyone.">
-<base href="http://img98.com/">
+<base href="http://www.img98.com/">
 <link href="css/style.css" rel="stylesheet" type="text/css" media="screen">
 <link rel="shortcut icon" href="css/images/favicon.ico">
 <script type="text/javascript" src="http://www.google-analytics.com/urchin.js"></script>
@@ -17,36 +17,22 @@
 </head>
 <body class="page_cell">
 	<div class="logo">&nbsp;</div>
-
 	<div class="nav_menu">
 		<ul>
 			<li><a href="index.php">Home</a></li>
-			<li><a href="info.php?act=about_us">About Us</a></li>
-			<li><a href="info.php?act=rules">Terms of Service</a></li>
-			<li><a href="gallery.php">Public Gallery</a></li>
+			<li><a href="http://img98.com/index.php?url=1">URL Upload</a></li>
+			<li><a href="http://img98.com/D-Logo/index.html">D-Logo</a></li>
+			<li><a href="http://img98.com/ps/index.html">Photoshop</a></li>
+			<li><a href="http://img98.com/pt/index.html">Paint</a></li>
+			<li><a href="http://img98.com/mail/index.php">Free Send E-Mail</a></li>
 			<li><a href="contact.php?act=file_report">Report Abuse</a></li>
-			<li><a href="index.php?do_random=true">Random Image</a></li>
 		</ul>
 	</div>
-	<div class="header_ads"><center>
-<font style="font-size: 0.1em" color="#F2F2F2">image hosting, image hosting service, multiple image hosting, unlimited bandwidth, quick image hosting, photo, hosting, picture</font>
-<span style="margin-top:2px"><script type="text/javascript"><!--
-google_ad_client = "pub-9321930707237775";
-/* IMG98 - Main Header */
-google_ad_slot = "8645385362";
-google_ad_width = 728;
-google_ad_height = 15;
-//-->
-</script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script></span>
-<font style="font-size: 0.1em" color="#F2F2F2">image hosting, image hosting service, multiple image hosting, unlimited bandwidth, quick image hosting, photo, hosting, picture</font>
-</center></div>
 	<div class="members_bar">
 					<div class="guest_links">
 				Welcome Guest
-				( <a href="javascript:void(0);" onclick="javascript:toggle_lightbox('users.php?act=login&amp;return=aHR0cDovL2ltZzk4LmNvbS9pbmZvLnBocD9hY3Q9cHJpdmFjeV9wb2xpY3k=', 'login_lightbox');">Log In</a> | 
-				<a href="javascript:void(0);" onclick="javascript:toggle_lightbox('users.php?act=register&amp;return=aHR0cDovL2ltZzk4LmNvbS9pbmZvLnBocD9hY3Q9cHJpdmFjeV9wb2xpY3k=', 'register_lightbox');">Register</a> )
+				( <a href="javascript:void(0);" onclick="javascript:toggle_lightbox('users.php?act=login&amp;return=aHR0cDovL3d3dy5pbWc5OC5jb20vaW5mby5waHA/YWN0PXByaXZhY3lfcG9saWN5', 'login_lightbox');">Log In</a> | 
+				<a href="javascript:void(0);" onclick="javascript:toggle_lightbox('users.php?act=register&amp;return=aHR0cDovL3d3dy5pbWc5OC5jb20vaW5mby5waHA/YWN0PXByaXZhY3lfcG9saWN5', 'register_lightbox');">Register</a> )
 			</div>
 			</div>
 	<div id="page_body" class="page_body">
@@ -71,6 +57,8 @@ If you have any question, please do not hesitate to <a href="contact.php?act=con
 		Powered by <a href="http://www.img98.com/">Biggest Upload Pic Team</a> |
 		<a href="info.php?act=privacy_policy">Privacy Policy</a> | 
 		<a href="contact.php?act=contact_us">Contact Us</a> |
+<a href="http://www.prchecker.info/" target="_blank">
+<img src="http://pr.prchecker.info/getpr.php?codex=aHR0cDovL3d3dy5pbWc5OC5jb20v&amp;tag=3" alt="PageRank" border="0"></a> |
 		<!-- AddThis Bookmark Button BEGIN -->
 		<script type="text/javascript">
 		  addthis_url    = location.href;   
@@ -79,24 +67,7 @@ If you have any question, please do not hesitate to <a href="contact.php?act=con
 		</script>
 		<script type="text/javascript" src="http://s7.addthis.com/js/addthis_widget.php?v=12"></script>
 		<!-- AddThis Bookmark Button END -->
-		| Page Views: 91,775
+
 <div style="margin-top:10px">
-<!-- PersianStat -->
-<script language="javascript" type="text/javascript" src="http://www.persianstat.ir/service/stat.js"></script>
-<script language="javascript" type="text/javascript">
-persianstat(10075653, 0);
-</script>
 
-<!-- /PersianStat -->
-<!-- Begin WebGozar.com Counter code -->
-<script type="text/javascript" language="javascript" src="http://www.webgozar.ir/c.aspx?Code=1051585&amp;t=counter"></script>
-<noscript><a href="http://www.webgozar.com/counter/stats.aspx?code=1051585" target="_blank">&#1570;&#1605;&#1575;&#1585;</a></noscript>
-<!-- End WebGozar.com Counter code -->
-
-
-<center><a href="http://www.camelpark.hu/" target="_blank"><img src="http://pr.camelpark.hu/sig.php?les=www.img98.com&amp;y=3" alt="Google Pagerank, SEO tools" border="0"></a>
-</center></div>
-	</div>
-
-
-<!-- Powered by Mihalism Multi Host - Copyright (c) 2007, 2008 Mihalism, Inc. (www.mihalism.com) --></body></html>
+<!-- Powered by Mihalism Multi Host - Copyright (c) 2007, 2008 Mihalism, Inc. (www.mihalism.com) --></div></div></body></html>
