--- a/s/sp/spi/spiceworks.com.html
+++ b/s/sp/spi/spiceworks.com.html
@@ -1,12 +1,12 @@
-<!--The following is the downloaded HTML source of the spiceworks.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216151601id_/http%3A//www.spiceworks.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the spiceworks.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616072200id_/http%3A//www.spiceworks.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 	<title>Spiceworks Privacy Policy</title>
 	<meta name="description" content="Spiceworks is the first free IT management software designed to meet the unique needs of small and medium businesses. Spiceworks software helps IT professionals easily discover, manage and monitor the software and hardware assets in their networks.">
 	<meta name="keywords" content="Spiceworks, computer inventory, pc inventory, hardware inventory, network management, software inventory, IT management, network monitoring">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<meta name="copyright" content="Copyright (c) 2006-2008 Spiceworks. All rights reserved.">
+	<meta name="copyright" content="Copyright (c) 2006-2009 Spiceworks. All rights reserved.">
 	<meta name="distribution" content="global">
 	<meta name="revisit-after" content="15 days">
 	<meta name="robots" content="all">
@@ -39,19 +39,13 @@
 		
 		<p>The Spiceworks Privacy Policy describes how we treat personal and company information when you use Spiceworks products and services, including information provided when you use the Spiceworks Desktop and its associated website. Please take a moment to read the following to learn more about our information practices, including what type of information is gathered, how the information is used and for what purposes, to whom we disclose the information, and how we safeguard your information.</p>
 		
-		<p id="truste"><strong>TRUSTe Licensee</strong></p>
-		
-		<p>Spiceworks is a licensee of the TRUSTe Web Privacy Seal Program.  TRUSTe is an independent, non-profit organization whose mission is to build user’s trust and confidence in the Internet by promoting the use of fair information practices.  This privacy statement covers the Spiceworks Desktop and the Web site located at <a href="http://www.spiceworks.com">www.spiceworks.com</a>.  Because this Web site wants to demonstrate its commitment to your privacy, it has agreed to disclose its information practices and have its privacy practices reviewed for compliance by TRUSTe.</p>
+		<p id="truste"><strong>TRUSTe Licensee</strong><br>Spiceworks is a licensee of the TRUSTe Web Privacy Seal Program.  TRUSTe is an independent, non-profit organization whose mission is to build user’s trust and confidence in the Internet by promoting the use of fair information practices.  This privacy statement covers the Spiceworks Desktop and the Web site located at <a href="http://www.spiceworks.com">www.spiceworks.com</a>.  Because this Web site wants to demonstrate its commitment to your privacy, it has agreed to disclose its information practices and have its privacy practices reviewed for compliance by TRUSTe.</p>
 
 		<p>Should you have questions or comments regarding this statement, please send email to <a href="mailto:feedback@spiceworks.com">feedback@spiceworks.com</a>.  If you do not receive acknowledgement of your inquiry or your inquiry has not been satisfactorily addressed, you should contact TRUSTe at <a href="http://www.truste.org/consumers/watchdog_complaint.php">http://www.truste.org/consumers/watchdog_complaint.php</a>.  TRUSTe will then serve as a liaison with us to resolve your concerns.</p>
 		
-		<p id="why"><strong>Why we collect information</strong></p>
+		<p id="why"><strong>Why we collect information</strong><br>We collect information because it helps us deliver the absolute best product experience we possibly can. It is one of our core beliefs that we can only achieve that goal with your help. Gathering this information enables us to provide you with convenient and accurate information about products and services. In addition, this information helps us to keep you posted on the latest product and service announcements, software updates, and support information in a timely fashion. Most importantly, this information allows us to tune the product experience over time, optimizing our service based on your feedback and how you actually use the service.</p>
 		
-		<p>We collect information because it helps us deliver the absolute best product experience we possibly can. It is one of our core beliefs that we can only achieve that goal with your help. Gathering this information enables us to provide you with convenient and accurate information about products and services. In addition, this information helps us to keep you posted on the latest product and service announcements, software updates, and support information in a timely fashion. Most importantly, this information allows us to tune the product experience over time, optimizing our service based on your feedback and how you actually use the service.</p>
-		
-		<p id="what"><strong>What information we collect</strong></p>
-		
-		<p>The Spiceworks Desktop automatically discovers the hardware and software installed on your computer network. The information gathered is limited to configuration information about these hardware devices and software applications. It <strong>does not</strong> gather any non-systems related information such as personal files and content, application specific data files and content, common user directories or other user data and documents. <strong>All of this configuration information is stored locally</strong> in a file on your computer in an encoded format. Access to this file is password protected using the operating systems access control mechanisms. <strong>None of this configuration information is sent to, or stored at, Spiceworks</strong>. This file and its contents <strong>are not</strong> made accessible through the Spiceworks Desktop to Spiceworks.</p>
+		<p id="what"><strong>What information we collect</strong><br>The Spiceworks Desktop automatically discovers the hardware and software installed on your computer network. The information gathered is limited to configuration information about these hardware devices and software applications. It <strong>does not</strong> gather any non-systems related information such as personal files and content, application specific data files and content, common user directories or other user data and documents. <strong>All of this configuration information is stored locally</strong> in a file on your computer in an encoded format. Access to this file is password protected using the operating systems access control mechanisms. <strong>None of this configuration information is sent to, or stored at, Spiceworks</strong>. This file and its contents <strong>are not</strong> made accessible through the Spiceworks Desktop to Spiceworks.</p>
 
 		<p>When you sign up for a Spiceworks Account, we ask you for personal information (such as your name, email address and an account password). We may combine the information you submit under your account with information from other Spiceworks services or third parties in order to deliver the service, to provide you with a better experience and to improve the quality of our services.</p>
 
@@ -61,10 +55,8 @@
 
 		<p>Spiceworks uses cookies and other common web technologies, which does not identify individual users, to enhance your online experience and to learn about how you use Spiceworks services in order to improve the quality of our services. As is true of most Web sites, we gather certain information automatically and store it in log files. This information includes display size, browser type, referring/exit pages, operating system, date/time stamp, and various clickstream data.</p>
 
-		<p id="how"><strong>How we use the information</strong></p>
+		<p id="how"><strong>How we use the information</strong><br>We use your email address to contact you from time-to-time about administrative notices, application alerts, community activity, product updates, special offers, and general news about Spiceworks.  The frequency of these updates varies based on the type of notification.  For example application alerts are delivered as they occur while our product newsletter is delivered monthly.  You can control which of these services you chose to receive and where applicable, their frequency of delivery.</p>
 		<ul>
-			<li>We use your email address to contact you from time-to-time about administrative notices, application alerts, community activity, product updates, special offers, and general news about Spiceworks.  The frequency of these updates varies based on the type of notification.  For example application alerts are delivered as they occur while our product newsletter is delivered monthly.  You can control which of these services you chose to receive and where applicable, their frequency of delivery.</li>
-			
 			<li>If you chose to complete the personal information section of your Spiceworks profile, you should be aware that this information is visible to other users of the Service.  Personally identifiable information you submit to one of these forums can be read, collected, or used by other individuals to send you unsolicited messages.</li>
 			
 			<li>We may use anonymized or aggregate personal and environment information to provide the services you've requested, including services that display customized content and advertising, and compare your environment configuration to those of the broader user community.  Such information does not identify you or your company individually.</li>
@@ -84,9 +76,7 @@
 			<li>If our company should ever file for bankruptcy or be a party to a merger or acquisition, we may share the information you provide to us to a third party in connection with such activity.</li>
 		</ul>
 		
-		<p id="choices"><strong>Your choices</strong></p>
-		
-		<p>You can uninstall the Spiceworks Desktop software through the "Add or Remove Programs" Control Panel at any time. When you uninstall the software, the Spiceworks Desktop and all its associated data files (i.e. configuration information about discovered hardware and software applications) will be deleted. Once deleted it cannot be recovered. We offer you choices when we ask for personal information, whenever reasonably possible. You may decline to provide personal information to us and/or refuse cookies in your browser, although some if not all of our features or services may not function properly as a result.</p>
+		<p id="choices"><strong>Your choices</strong><br>You can uninstall the Spiceworks Desktop software through the "Add or Remove Programs" Control Panel at any time. When you uninstall the software, the Spiceworks Desktop and all its associated data files (i.e. configuration information about discovered hardware and software applications) will be deleted. Once deleted it cannot be recovered. We offer you choices when we ask for personal information, whenever reasonably possible. You may decline to provide personal information to us and/or refuse cookies in your browser, although some if not all of our features or services may not function properly as a result.</p>
 
 		<p>You may "opt-in" to receive application and site notifications, newsletters, third-party offers or other information via email. Users may remove themselves from such services at their discretion. Any email sent to an "opt-in" list will include directions for how a user may remove himself or herself from the list or a URL where the user may find such directions.</p>
 
@@ -94,36 +84,22 @@
 
 		<p>We make good faith efforts to provide you access to your personal information upon request and to let you correct such data if it is inaccurate and delete it, when reasonably possible.  If your personally identifiable information changes, you may update it using the "Update Profile" link at the bottom of the email newsletter.</p>
 
-		<p id="security"><strong>Information Confidentiality and Security</strong></p>
-		
-		<p>We use SSL to protect the personal information transmitted between the Spiceworks Desktop and Spiceworks.  We limit access to this information to employees or contracted third parties who need to come into contact with that information to provide you with the service. When we use third parties to assist us, we require that they comply with our Privacy Policy and all other appropriate confidentiality and security measures.</p>
+		<p id="security"><strong>Information Confidentiality and Security</strong><br>We use SSL to protect the personal information transmitted between the Spiceworks Desktop and Spiceworks.  We limit access to this information to employees or contracted third parties who need to come into contact with that information to provide you with the service. When we use third parties to assist us, we require that they comply with our Privacy Policy and all other appropriate confidentiality and security measures.</p>
 
-		<p id="third-party"><strong>Third-Party Sites</strong></p>
+		<p id="third-party"><strong>Third-Party Sites</strong><br>Please be aware that other websites that may be accessed through our Service may collect personally identifiable information about you. Please note that the privacy policies of these sites may differ from those of Spiceworks. Spiceworks is not responsible for the privacy policies and practices of any linked web site. This Privacy Policy does not cover the information practices of those third-party websites linked to our site. We encourage you to read the privacy statement of any web site you may visit.</p>
 
-		<p>Please be aware that other websites that may be accessed through our Service may collect personally identifiable information about you. Please note that the privacy policies of these sites may differ from those of Spiceworks. Spiceworks is not responsible for the privacy policies and practices of any linked web site. This Privacy Policy does not cover the information practices of those third-party websites linked to our site. We encourage you to read the privacy statement of any web site you may visit.</p>
+		<p id="children"><strong>Children's Privacy</strong><br>This Service is not intended for or directed to persons under the age of 15. Any person who provides their information to the Company through the account login page for new customers or any other part of the Service represents to the Company that they are 15 years of age or older.</p>
 
-		<p id="children"><strong>Children's Privacy</strong></p>
+		<p id="disclaimer"><strong>Legal Disclaimer</strong><br>We reserve the right to disclose your personally identifiable information as required by law and when we believe that disclosure is necessary to protect our rights and/or to comply with a judicial proceeding, court order, or legal process served on our Web site.</p>
 
-		<p>This Service is not intended for or directed to persons under the age of 15. Any person who provides their information to the Company through the account login page for new customers or any other part of the Service represents to the Company that they are 15 years of age or older.</p>
+		<p id="changes"><strong>Changes to Privacy Statement</strong><br>Spiceworks may update its privacy policy from time to time. When we change the policy in a material way a prominent notice will be posted on our website along with the updated privacy policy.  Please check this URL frequently to see the latest version of this policy.</p>
 
-		<p id="disclaimer"><strong>Legal Disclaimer</strong></p>
-		
-		<p>We reserve the right to disclose your personally identifiable information as required by law and when we believe that disclosure is necessary to protect our rights and/or to comply with a judicial proceeding, court order, or legal process served on our Web site.</p>
+		<p id="more"><strong>More information</strong><br>Spiceworks adheres to the US Safe Harbor privacy principles. For more information about the Safe Harbor framework or our registration, see the Department of Commerce's web site.</p>
 
-		<p id="changes"><strong>Changes to Privacy Statement</strong></p>
-
-		<p>Spiceworks may update its privacy policy from time to time. When we change the policy in a material way a prominent notice will be posted on our website along with the updated privacy policy.  Please check this URL frequently to see the latest version of this policy.</p>
-
-		<p id="more"><strong>More information</strong></p>
-
-		<p>Spiceworks adheres to the US Safe Harbor privacy principles. For more information about the Safe Harbor framework or our registration, see the Department of Commerce's web site.</p>
-
-		<p id="feedback"><strong>Feedback</strong></p>
-		
-		<p>If you have comments on the Spiceworks Service or ideas on how to improve it, please send email to <a href="mailto:feedback@spiceworks.com">feedback@spiceworks.com</a>. Please note that by doing so, you also grant Spiceworks and third parties permission to use and incorporate your ideas or comments into the Service (or third party software or content) without further compensation or approval.</p>
+		<p id="feedback"><strong>Feedback</strong><br>If you have comments on the Spiceworks Service or ideas on how to improve it, please send email to <a href="mailto:feedback@spiceworks.com">feedback@spiceworks.com</a>. Please note that by doing so, you also grant Spiceworks and third parties permission to use and incorporate your ideas or comments into the Service (or third party software or content) without further compensation or approval.</p>
 
 		<p>The information contained in this web site is subject to change without notice.<br>
-		Copyright © 2006-2008 Spiceworks, Inc. All rights reserved.<br>
+		Copyright © 2006-2009 Spiceworks, Inc. All rights reserved.<br>
 		Spiceworks, Inc. 9005 Mountain Ridge Drive, Suite 100, Austin, TX 78759, USA</p>
 	</div>
 	
@@ -169,7 +145,7 @@
 		<a href="/jobs/">jobs</a>  |  
 		<a href="/privacy/">privacy</a> | 
 		<a href="/terms/">terms of use</a><br>
-		© Copyright 2006-2008 Spiceworks
+		© Copyright 2006-2009 Spiceworks
 	</div>
 </div>
 
@@ -178,6 +154,7 @@
 	var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 	document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
 </script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+<script type="text/javascript" src="/library/javascript/ga_keyword.js"></script>
 <script type="text/javascript">
 	var pageTracker = _gat._getTracker("UA-314222-1");
 	pageTracker._initData();
