--- a/e/em/ema/emailaces.com.html
+++ b/e/em/ema/emailaces.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the emailaces.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216012057id_/http%3A//www.emailaces.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the emailaces.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616072303id_/http%3A//www.emailaces.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>Autoresponder - Email Aces Autoresponders</title>
@@ -59,7 +59,7 @@
 </td>
 <td background="images/login-background.jpg" height="140" width="226" align="CENTER" valign="TOP">
 <!-- LOGIN FORM TABLE HERE -->
-<form action="http://www.emailaces.com/main/index.php?" method="POST">
+<form action="http://www.emailaces.com/main/index.php?PHPSESSID=059a9a17634f155ba1aa0444db3a079c" method="POST">
 <table width="180" border="0" cellpadding="0" cellspacing="0">
 <tbody><tr>
 <td colspan="2" height="18" width="180" align="LEFT" valign="MIDDLE">
@@ -258,7 +258,7 @@ privacy policy.
 <tr class="blackbg">
 <td width="10"><img src="images/invisible.gif" alt="unlimited autoresponders" width="10" height="10" border="0"></td>
 <td width="550" valign="TOP">
-<div class="whitea12b">Email Aces © 2002-2008. <span class="whitea12">A division of Internet Marketing Aces, LLC. All rights reserved.</span></div>
+<div class="whitea12b">Email Aces © 2002-2009. <span class="whitea12">A division of Internet Marketing Aces, LLC. All rights reserved.</span></div>
 <div class="whitea10b">
 Internet Marketing Aces, LLC // 12472 Lake Underhill Rd. Suite 112 // Orlando, FL 32828 // U.S.A.
 <br>
@@ -273,7 +273,15 @@ contact us - <a class="whitea10b" href="mailto:support@emailaces.com">support@em
 </td>
 </tr>
 </tbody></table>
-
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-6759761-1");
+pageTracker._trackPageview();
+} catch(err) {}</script>
 <!-- END FOOTER AREA TABLE -->
 </td></tr>
 </tbody></table>
